# pymathics-hello

./: .gitignore  .pre-commit-config.yaml  ChangeLog-spell-corrected.diff  Makefile  NEWS.md  README.rst  pyproject.toml  setup.py
.github/workflows/: MSWindows.yml  Ubuntu.yml  isort-and-black-checks.yml  osx.yml  ubuntu.yml  windows.yml
admin-tools/: check-versions.sh  make-dist.sh
pymathics/hello/: __init__.py  __main__.py  version.py
test/: test_hello.py
